<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Custom London Transport</string>

    // Add a new route screen
    <string name="AddANewRouteTitleText">Add a new route</string>
    <string name="DirectionLabel">Direction</string>
    <string name="StartingStopBusLabel">Starting Stop</string>
    <string name="StartingStationTubeLabel">Starting Station</string>

    <string name ="SelectBusRouteClosestFirst">Bus route (closest first)</string>
    <string name ="SelectTubeLine">Tube line</string>
    <string name="BusRouteLabel">Bus Route</string>


    // Add a new station screen
    <string name="AddANewStationTitleText">Add a new station</string>
    <string name ="stopCodeLabel">Enter Stop/Station Name</string>
    <string name ="stopByLocationLabel">Select from list (nearest first)</string>
    <string name ="SelectTubeStationClosestFirst">Tube station (closest first)</string>
    <string name ="SelectBusStopClosestFirst">Bus stop (closest first)</string>
    <string name ="EnterTubeStationName">Enter tube station name</string>
    <string name ="EnterBusStopName">Enter bus stop name</string>
    <string name ="busTowardsText">Towards</string>


    // Both 'add' screens
    <string name="action_reset">Reset</string>
    <string name="TransportModeLabel">Transport mode</string>
    <string name="MaxNumberLabel">Maximum entries</string>
    <string name="ConditionsLabel">Specify conditions</string>
    <string name="AddButtonLabel">Add</string>
    <string name="UpdateButtonLabel">Update</string>
    <string name ="ConditionsTitleText">Set conditions</string>
    <string name ="ConditionsSetInform">Conditions set</string>
    <string name ="NoConditionsSetInform">No conditions set</string>
    <string name ="action_local_mode_toggle">Local mode</string>
    <string name="InvalidRouteSelectedErrorMessage">Please select a valid stop or station from the drop down list</string>

    //User List View screen
    <string name="action_clear_user_routes">Clear All</string>
    <string name="action_settings_menu">Settings</string>
    <string name="action_about">About</string>
    <string name ="RunQueryButton">Run Query</string>
    <string name ="AddNewStationButton">Add New Station</string>
    <string name ="AddNewRouteButton">Add New Route</string>


    // Conditions
    <string name ="conditions_AnyTime">Any time</string>
    <string name ="conditions_AnyDay">Any day</string>
    <string name ="conditions_Time">Time</string>
    <string name ="conditions_Days">Days</string>
    <string name ="conditions_Radius">Radius</string>
    <string name ="conditions_From">From</string>
    <string name ="conditions_To">To</string>
    <string name ="conditions_SelectDay">Select days: </string>
    <string name ="conditions_RadiusFromStartingStopStation">Radius from starting stop/station</string>
    <string name ="conditions_metresFromStartingStationStop">metres</string>
    <string name ="conditions_okButton">Ok</string>
    <string name ="conditions_cancelButton">Cancel</string>


    // Query Results Screen
    <string name ="no_results">None</string>
    <string name ="no_connection">No internet connection detected</string>
    <string name ="query_route">Route</string>
    <string name ="query_destination">Destination</string>
    <string name ="query_time">Time</string>
    <string name ="query_starting">Starting</string>
    <string name ="query_refreshButton">Refresh</string>

    //Widget
    <string name ="WidgetLastUpdated">Last updated</string>

    // Menu text
    <string name ="Delete">Delete</string>
    <string name ="Edit">Edit</string>


    // Transport mode choices
    <string-array name="transport_mode_array">
        <item></item>
        <item>Bus</item>
        <item>Tube</item>
    </string-array>

    //Max number choices
    <string-array name="max_number_array">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    // Radius choices
    <string-array name="radius_starting_station_array">
        <item>OFF</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>

    // Preference Refresh Interval
    <string-array name="widget_refresh_array">
        <item>Manual only</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>

    <string-array name="widget_refresh_array_values">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    //Preference Colour Array
    <string-array name="widget_colour_array">
        <item>Transparent</item>
        <item>Black</item>
        <item>White</item>
        <item>Dark grey</item>
        <item>Light grey</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Dark green</item>
        <item>Light green</item>
        <item>Dark Blue</item>
        <item>Light Blue</item>
        <item>Red</item>
    </string-array>

    <string-array name="widget_colour_array_values">
        <item>transparent</item>
        <item>black</item>
        <item>white</item>
        <item>darkgrey</item>
        <item>lightgrey</item>
        <item>yellow</item>
        <item>orange</item>
        <item>darkgreen</item>
        <item>lightgreen</item>
        <item>darkblue</item>
        <item>lightblue</item>
        <item>red</item>
    </string-array>

    //Days of the week
    <string name ="Monday">Mon</string>
    <string name ="Tuesday">Tue</string>
    <string name ="Wednesday">Wed</string>
    <string name ="Thursday">Thu</string>
    <string name ="Friday">Fri</string>
    <string name ="Saturday">Sat</string>
    <string name ="Sunday">Sun</string>




</resources>
