<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SetParameters"
    android:background="@color/user_list_item_route">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/routeAddToOrUpdateUserListButton"
            android:layout_gravity="center"
            android:onClick="addToOrUpdateAndReturnToUserListView" />
    </FrameLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/frameLayout"
        android:background="@color/white"
        android:padding="3dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/routeLinearLayoutRight1"
                android:layout_alignTop="@+id/routeLinearLayoutLeft1"
                android:layout_toRightOf="@+id/routeLinearLayoutLeft1">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeTransportModeSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="center_vertical|left" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeLineSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="center_vertical|left" />

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeBusRouteAutoCompleteText"
                    android:inputType="textNoSuggestions"
                    android:dropDownHorizontalOffset="-125dp"
                    android:ellipsize="end"
                    android:dropDownWidth="fill_parent"
                    android:nextFocusUp="@id/routeBusRouteAutoCompleteText"
                    android:nextFocusLeft="@id/routeBusRouteAutoCompleteText" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeStartingStopSpinner"
                    android:spinnerMode="dropdown"

                    android:gravity="center_vertical|left" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeDirectionSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="center_vertical|left" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/routeLinearLayoutLeft1"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/TransportModeLabel"
                    android:id="@+id/routeTransportModeLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/TubeLineLabel"
                    android:id="@+id/routeLineSpinnerLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/BusRouteLabel"
                    android:id="@+id/routeBusRouteAutoTextLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/StartingStopLabel"
                    android:id="@+id/routeStartingStopLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/DirectionLabel"
                    android:id="@+id/routeDirectionLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/routeConditionsPreviewText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textStyle="italic"
                android:layout_below="@+id/routeLinearLayoutLeft2" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/routeLinearLayoutRight2"
                android:layout_toRightOf="@+id/routeLinearLayoutLeft2"
                android:layout_below="@+id/routeLinearLayoutRight1">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:id="@+id/routeMaxNumberSpinner"
                    android:spinnerMode="dropdown"
                    android:gravity="center_vertical|left" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:id="@+id/routeConditionsSwitch"
                    android:gravity="center_vertical"
                    android:textOff="None"
                    android:textOn="Set" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/routeLinearLayoutLeft1"
                android:id="@+id/routeLinearLayoutLeft2"
                android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/MaxNumberLabel"
                    android:id="@+id/routeMaxNumberLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ConditionsLabel"
                    android:id="@+id/routeConditionsLabel"
                    android:textSize="@dimen/menuTextSize"
                    android:gravity="center_vertical|left" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
